cuneiform-addons/cuneiform-dax/target/generated-sources/antlr4/de/huberlin/cuneiform/libdax/parser/DaxParser.java
// Generated from de/huberlin/cuneiform/libdax/parser/Dax.g4 by ANTLR 4.2
package de.huberlin.cuneiform.libdax.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DaxParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADAG=1, ARGUMENT=2, CHILD=3, COUNT=4, DVNAME=5, DVVERSION=6, EQ=7, EXECUTABLE=8, 
		FALSE=9, FILE=10, FILENAME=11, ID=12, INDEX=13, INOUT=14, INPUT=15, JOB=16, 
		LARGUMENT=17, LEVEL=18, LINK=19, LTAG=20, NAME=21, OPTIONAL=22, OUTPUT=23, 
		PARENT=24, RARGUMENT=25, REF=26, REGISTER=27, RTAG=28, SCHEMALOCATION=29, 
		SLASH=30, TRANSFER=31, TRUE=32, TYPE=33, USES=34, VERSION=35, XMLNS=36, 
		XSI=37, STRING=38, ARG=39, METAINFO=40, COMMENT=41, WS=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'adag'", "'argument'", "'child'", "'count'", "'dv-name'", 
		"'dv-version'", "'='", "'\"executable\"'", "'\"false\"'", "'file'", "'filename'", 
		"'id'", "'index'", "'\"inout\"'", "'\"input\"'", "'job'", "'<argument>'", 
		"'level'", "'link'", "'<'", "'name'", "'optional'", "'\"output\"'", "'parent'", 
		"'</argument>'", "'ref'", "'register'", "'>'", "'xsi:schemaLocation'", 
		"'/'", "'transfer'", "'\"true\"'", "'type'", "'uses'", "'version'", "'xmlns'", 
		"'xmlns:xsi'", "STRING", "ARG", "METAINFO", "COMMENT", "WS"
	};
	public static final int
		RULE_adag = 0, RULE_adagProp = 1, RULE_adagEl = 2, RULE_filename = 3, 
		RULE_filenameProp = 4, RULE_job = 5, RULE_jobProp = 6, RULE_jobEl = 7, 
		RULE_argument = 8, RULE_argumentEl = 9, RULE_jobUsesProp = 10, RULE_child = 11, 
		RULE_parent = 12;
	public static final String[] ruleNames = {
		"adag", "adagProp", "adagEl", "filename", "filenameProp", "job", "jobProp", 
		"jobEl", "argument", "argumentEl", "jobUsesProp", "child", "parent"
	};

	@Override
	public String getGrammarFileName() { return "Dax.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AdagContext extends ParserRuleContext {
		public List<TerminalNode> LTAG() { return getTokens(DaxParser.LTAG); }
		public AdagElContext adagEl(int i) {
			return getRuleContext(AdagElContext.class,i);
		}
		public List<TerminalNode> ADAG() { return getTokens(DaxParser.ADAG); }
		public TerminalNode LTAG(int i) {
			return getToken(DaxParser.LTAG, i);
		}
		public TerminalNode ADAG(int i) {
			return getToken(DaxParser.ADAG, i);
		}
		public List<TerminalNode> RTAG() { return getTokens(DaxParser.RTAG); }
		public TerminalNode SLASH() { return getToken(DaxParser.SLASH, 0); }
		public List<AdagPropContext> adagProp() {
			return getRuleContexts(AdagPropContext.class);
		}
		public AdagPropContext adagProp(int i) {
			return getRuleContext(AdagPropContext.class,i);
		}
		public List<AdagElContext> adagEl() {
			return getRuleContexts(AdagElContext.class);
		}
		public TerminalNode RTAG(int i) {
			return getToken(DaxParser.RTAG, i);
		}
		public AdagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterAdag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitAdag(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitAdag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdagContext adag() throws RecognitionException {
		AdagContext _localctx = new AdagContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_adag);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(26); match(LTAG);
			setState(27); match(ADAG);
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COUNT) | (1L << INDEX) | (1L << NAME) | (1L << SCHEMALOCATION) | (1L << VERSION) | (1L << XMLNS) | (1L << XSI))) != 0)) {
				{
				{
				setState(28); adagProp();
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34); match(RTAG);
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(35); adagEl();
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(41); match(LTAG);
			setState(42); match(SLASH);
			setState(43); match(ADAG);
			setState(44); match(RTAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdagPropContext extends ParserRuleContext {
		public TerminalNode COUNT() { return getToken(DaxParser.COUNT, 0); }
		public TerminalNode INDEX() { return getToken(DaxParser.INDEX, 0); }
		public TerminalNode VERSION() { return getToken(DaxParser.VERSION, 0); }
		public TerminalNode SCHEMALOCATION() { return getToken(DaxParser.SCHEMALOCATION, 0); }
		public TerminalNode NAME() { return getToken(DaxParser.NAME, 0); }
		public TerminalNode XMLNS() { return getToken(DaxParser.XMLNS, 0); }
		public TerminalNode XSI() { return getToken(DaxParser.XSI, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public AdagPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adagProp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterAdagProp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitAdagProp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitAdagProp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdagPropContext adagProp() throws RecognitionException {
		AdagPropContext _localctx = new AdagPropContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_adagProp);
		try {
			setState(67);
			switch (_input.LA(1)) {
			case XMLNS:
				enterOuterAlt(_localctx, 1);
				{
				setState(46); match(XMLNS);
				setState(47); match(EQ);
				setState(48); match(STRING);
				}
				break;
			case XSI:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); match(XSI);
				setState(50); match(EQ);
				setState(51); match(STRING);
				}
				break;
			case SCHEMALOCATION:
				enterOuterAlt(_localctx, 3);
				{
				setState(52); match(SCHEMALOCATION);
				setState(53); match(EQ);
				setState(54); match(STRING);
				}
				break;
			case VERSION:
				enterOuterAlt(_localctx, 4);
				{
				setState(55); match(VERSION);
				setState(56); match(EQ);
				setState(57); match(STRING);
				}
				break;
			case COUNT:
				enterOuterAlt(_localctx, 5);
				{
				setState(58); match(COUNT);
				setState(59); match(EQ);
				setState(60); match(STRING);
				}
				break;
			case INDEX:
				enterOuterAlt(_localctx, 6);
				{
				setState(61); match(INDEX);
				setState(62); match(EQ);
				setState(63); match(STRING);
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 7);
				{
				setState(64); match(NAME);
				setState(65); match(EQ);
				setState(66); match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdagElContext extends ParserRuleContext {
		public ChildContext child() {
			return getRuleContext(ChildContext.class,0);
		}
		public FilenameContext filename() {
			return getRuleContext(FilenameContext.class,0);
		}
		public JobContext job() {
			return getRuleContext(JobContext.class,0);
		}
		public AdagElContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adagEl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterAdagEl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitAdagEl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitAdagEl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdagElContext adagEl() throws RecognitionException {
		AdagElContext _localctx = new AdagElContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_adagEl);
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); filename();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70); job();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(71); child();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilenameContext extends ParserRuleContext {
		public TerminalNode LTAG() { return getToken(DaxParser.LTAG, 0); }
		public TerminalNode FILENAME() { return getToken(DaxParser.FILENAME, 0); }
		public TerminalNode SLASH() { return getToken(DaxParser.SLASH, 0); }
		public TerminalNode RTAG() { return getToken(DaxParser.RTAG, 0); }
		public List<FilenamePropContext> filenameProp() {
			return getRuleContexts(FilenamePropContext.class);
		}
		public FilenamePropContext filenameProp(int i) {
			return getRuleContext(FilenamePropContext.class,i);
		}
		public FilenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterFilename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitFilename(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitFilename(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilenameContext filename() throws RecognitionException {
		FilenameContext _localctx = new FilenameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_filename);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); match(LTAG);
			setState(75); match(FILENAME);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FILE || _la==LINK) {
				{
				{
				setState(76); filenameProp();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82); match(SLASH);
			setState(83); match(RTAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilenamePropContext extends ParserRuleContext {
		public FilenamePropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filenameProp; }
	 
		public FilenamePropContext() { }
		public void copyFrom(FilenamePropContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FilenamePropLinkContext extends FilenamePropContext {
		public TerminalNode OUTPUT() { return getToken(DaxParser.OUTPUT, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode INPUT() { return getToken(DaxParser.INPUT, 0); }
		public TerminalNode INOUT() { return getToken(DaxParser.INOUT, 0); }
		public TerminalNode LINK() { return getToken(DaxParser.LINK, 0); }
		public FilenamePropLinkContext(FilenamePropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterFilenamePropLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitFilenamePropLink(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitFilenamePropLink(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FilenamePropFileContext extends FilenamePropContext {
		public TerminalNode FILE() { return getToken(DaxParser.FILE, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public FilenamePropFileContext(FilenamePropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterFilenamePropFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitFilenamePropFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitFilenamePropFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FilenamePropContext filenameProp() throws RecognitionException {
		FilenamePropContext _localctx = new FilenamePropContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filenameProp);
		int _la;
		try {
			setState(91);
			switch (_input.LA(1)) {
			case FILE:
				_localctx = new FilenamePropFileContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85); match(FILE);
				setState(86); match(EQ);
				setState(87); match(STRING);
				}
				break;
			case LINK:
				_localctx = new FilenamePropLinkContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88); match(LINK);
				setState(89); match(EQ);
				setState(90);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INOUT) | (1L << INPUT) | (1L << OUTPUT))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobContext extends ParserRuleContext {
		public List<JobPropContext> jobProp() {
			return getRuleContexts(JobPropContext.class);
		}
		public List<TerminalNode> LTAG() { return getTokens(DaxParser.LTAG); }
		public JobPropContext jobProp(int i) {
			return getRuleContext(JobPropContext.class,i);
		}
		public TerminalNode LTAG(int i) {
			return getToken(DaxParser.LTAG, i);
		}
		public TerminalNode JOB(int i) {
			return getToken(DaxParser.JOB, i);
		}
		public List<TerminalNode> RTAG() { return getTokens(DaxParser.RTAG); }
		public TerminalNode SLASH() { return getToken(DaxParser.SLASH, 0); }
		public List<JobElContext> jobEl() {
			return getRuleContexts(JobElContext.class);
		}
		public List<TerminalNode> JOB() { return getTokens(DaxParser.JOB); }
		public TerminalNode RTAG(int i) {
			return getToken(DaxParser.RTAG, i);
		}
		public JobElContext jobEl(int i) {
			return getRuleContext(JobElContext.class,i);
		}
		public JobContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_job; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJob(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJob(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJob(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobContext job() throws RecognitionException {
		JobContext _localctx = new JobContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_job);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(LTAG);
			setState(94); match(JOB);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DVNAME) | (1L << DVVERSION) | (1L << ID) | (1L << LEVEL) | (1L << NAME) | (1L << VERSION))) != 0)) {
				{
				{
				setState(95); jobProp();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101); match(RTAG);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(102); jobEl();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(108); match(LTAG);
			setState(109); match(SLASH);
			setState(110); match(JOB);
			setState(111); match(RTAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobPropContext extends ParserRuleContext {
		public JobPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobProp; }
	 
		public JobPropContext() { }
		public void copyFrom(JobPropContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class JobPropIdContext extends JobPropContext {
		public TerminalNode ID() { return getToken(DaxParser.ID, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public JobPropIdContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JobPropDvnameContext extends JobPropContext {
		public TerminalNode DVNAME() { return getToken(DaxParser.DVNAME, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public JobPropDvnameContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropDvname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropDvname(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropDvname(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JobPropNameContext extends JobPropContext {
		public TerminalNode NAME() { return getToken(DaxParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public JobPropNameContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropName(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JobPropDvversionContext extends JobPropContext {
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public TerminalNode DVVERSION() { return getToken(DaxParser.DVVERSION, 0); }
		public JobPropDvversionContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropDvversion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropDvversion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropDvversion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JobPropLevelContext extends JobPropContext {
		public TerminalNode LEVEL() { return getToken(DaxParser.LEVEL, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public JobPropLevelContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropLevel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropLevel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropLevel(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JobPropVersionContext extends JobPropContext {
		public TerminalNode VERSION() { return getToken(DaxParser.VERSION, 0); }
		public TerminalNode EQ() { return getToken(DaxParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(DaxParser.STRING, 0); }
		public JobPropVersionContext(JobPropContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobPropVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobPropVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobPropVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobPropContext jobProp() throws RecognitionException {
		JobPropContext _localctx = new JobPropContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jobProp);
		try {
			setState(131);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new JobPropIdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113); match(ID);
				setState(114); match(EQ);
				setState(115); match(STRING);
				}
				break;
			case NAME:
				_localctx = new JobPropNameContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(116); match(NAME);
				setState(117); match(EQ);
				setState(118); match(STRING);
				}
				break;
			case VERSION:
				_localctx = new JobPropVersionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(119); match(VERSION);
				setState(120); match(EQ);
				setState(121); match(STRING);
				}
				break;
			case LEVEL:
				_localctx = new JobPropLevelContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(122); match(LEVEL);
				setState(123); match(EQ);
				setState(124); match(STRING);
				}
				break;
			case DVNAME:
				_localctx = new JobPropDvnameContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(125); match(DVNAME);
				setState(126); match(EQ);
				setState(127); match(STRING);
				}
				break;
			case DVVERSION:
				_localctx = new JobPropDvversionContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(128); match(DVVERSION);
				setState(129); match(EQ);
				setState(130); match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobElContext extends ParserRuleContext {
		public TerminalNode LTAG() { return getToken(DaxParser.LTAG, 0); }
		public TerminalNode SLASH() { return getToken(DaxParser.SLASH, 0); }
		public TerminalNode RTAG() { return getToken(DaxParser.RTAG, 0); }
		public List<JobUsesPropContext> jobUsesProp() {
			return getRuleContexts(JobUsesPropContext.class);
		}
		public TerminalNode USES() { return getToken(DaxParser.USES, 0); }
		public JobUsesPropContext jobUsesProp(int i) {
			return getRuleContext(JobUsesPropContext.class,i);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public JobElContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobEl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).enterJobEl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DaxListener ) ((DaxListener)listener).exitJobEl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DaxVisitor ) return ((DaxVisitor<? extends T>)visitor).visitJobEl(this);
			else return visitor.visitChildren(this);
		}
	}
